<resources>
    <string name="app_name">CCD\'22 Pune</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="google_image">Google Image</string>
    <string name="signin">Login</string>
    <string name="attendee">Attendee Details</string>
    <string name="name">Name : </string>
    <string name="username">Pratik Kale </string>
    <string name="organization">Organization : </string>
    <string name="organization_name">U-SAMRT AI</string>
    <string name="check_in">Check In</string>
    <string name="checked_in">Checked In</string>
    <string name="food">Food</string>
    <string name="morning">Morning Tea</string>
    <string name="lunch">Lunch</string>
    <string name="high_tea">High Tea</string>
    <string name="swags">Swags</string>
    <string name="completed">Completed</string>
</resources>