<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/image_google_pune"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:src="@drawable/gdg_cloud_pune"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:contentDescription="@string/google_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_exit"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image_exit"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_exit"
        android:onClick="logOut"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/google_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:id="@+id/txtAttendee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/attendee"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_google_pune"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/txtAttendee"
        app:layout_constraintTop_toBottomOf="@id/txtAttendee"/>

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/txtName"
        app:layout_constraintEnd_toEndOf="@id/txtAttendee"
        app:layout_constraintTop_toTopOf="@id/txtName"
        app:layout_constraintBottom_toBottomOf="@id/txtName"/>

    <TextView
        android:id="@+id/txtOrganization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@id/txtAttendee"
        app:layout_constraintTop_toBottomOf="@id/txtName"/>

    <TextView
        android:id="@+id/txtOrganizationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/organization_name"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/txtOrganization"
        app:layout_constraintEnd_toEndOf="@id/txtAttendee"
        app:layout_constraintTop_toTopOf="@id/txtOrganization"
        app:layout_constraintBottom_toBottomOf="@id/txtOrganization"/>

    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOrganization"/>

    <View
        android:id="@+id/check_in"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_check_in"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine"/>

    <TextView
        android:id="@+id/txtCheckIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/check_in"
        app:layout_constraintEnd_toEndOf="@id/txtAttendee"
        app:layout_constraintTop_toTopOf="@id/check_in"
        app:layout_constraintBottom_toBottomOf="@id/check_in"/>


    <TextView
        android:id="@+id/btnCheckIn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@drawable/btn_bg_drawable"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/check_in"
        app:layout_constraintTop_toBottomOf="@id/check_in"/>


    <View
        android:id="@+id/food"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_food"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCheckIn"/>

    <TextView
        android:id="@+id/txtFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/food"
        app:layout_constraintEnd_toEndOf="@id/txtAttendee"
        app:layout_constraintTop_toTopOf="@id/food"
        app:layout_constraintBottom_toBottomOf="@id/food"/>

    <TextView
        android:id="@+id/btnMorningTea"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/morning"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@drawable/btn_bg_drawable"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/food"
        app:layout_constraintTop_toBottomOf="@id/food"/>

    <TextView
        android:id="@+id/btnLunch"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@drawable/btn_bg_drawable"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/food"
        app:layout_constraintTop_toBottomOf="@id/btnMorningTea"/>

    <TextView
        android:id="@+id/btnHighTea"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/high_tea"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@drawable/btn_bg_drawable"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/food"
        app:layout_constraintTop_toBottomOf="@id/btnLunch"/>


    <View
        android:id="@+id/swags"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_gift_box"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnHighTea"/>

    <TextView
        android:id="@+id/txtSwags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/swags"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/swags"
        app:layout_constraintEnd_toEndOf="@id/txtAttendee"
        app:layout_constraintTop_toTopOf="@id/swags"
        app:layout_constraintBottom_toBottomOf="@id/swags"/>


    <TextView
        android:id="@+id/btnSwags"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/swags"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textAlignment="center"
        android:background="@drawable/btn_bg_drawable"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/swags"
        app:layout_constraintTop_toBottomOf="@id/swags"/>

    <ImageView
        android:id="@+id/image_google_days"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:src="@drawable/gdg_cloud_days"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/google_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:src="@drawable/ic_qr_code_scanner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>